# text-tools

./: .gitignore  Cargo.toml  README.md  content.md
common/: Cargo.toml
common/src/: lib.rs  parse_outline.rs
common/src/types/: mod.rs  outline_entry.rs  time_code.rs
description_maker/: Cargo.toml  README.md
description_maker/src/: main-bak.rs  main.rs  template.rs  types.rs
description_maker/src/templates/: spotify.html.tera  youtube.txt.tera
description_maker/templates/: content.md  spotify.html
transcript_marker/: Cargo.toml  README.md
transcript_marker/src/: lib.rs  main.rs  mark_transcript.rs  parse_outline.rs
transcript_marker/src/snapshots/: transcript_marker__mark_transcript__tests__put_text_before_timecodes.snap
transcript_marker/src/types/: outline_entry.rs  time_code.rs
