[package]
name = "description_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
htmlescape = "0.3.1"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tera = { version = "1.19.1", features = ["builtins"] }
common = { path = "../common" }
