[package]
name = "transcript_marker"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["cargo"] }
insta = "1.34.0"
regex = "1.10.2"
common = { path = "../common" }
